--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     /* INICIO */
     #inicio {
       background: linear-gradient(rgba(255, 158, 181, 0.6), rgba(255, 158, 181, 0.6)),
-                  url("Imgs/home.jpeg") no-repeat center center/cover;
+                  url("home.jpeg") no-repeat center center/cover;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -265,47 +265,47 @@
   <h2>Nuestro Catálogo</h2>
   <div class="grid">
     <div class="card">
-      <img src="Imgs/lirios.jpeg" alt="Lirios">
+      <img src="lirios.jpeg" alt="Lirios">
       <h3>Lirios</h3>
       <p>Simbolizan pureza y renovación, ideales para celebrar nuevos comienzos.</p>
     </div>
     <div class="card">
-      <img src="Imgs/tulipanes.jpeg" alt="Tulipanes">
+      <img src="tulipanes.jpeg" alt="Tulipanes">
       <h3>Tulipanes</h3>
       <p>Representan amor perfecto y alegría, perfectos para regalar en primavera.</p>
     </div>
     <div class="card">
-      <img src="Imgs/girasol.jpeg" alt="Girasol">
+      <img src="girasol.jpeg" alt="Girasol">
       <h3>Girasol</h3>
       <p>Con su energía positiva, transmiten felicidad y vitalidad.</p>
     </div>
     <div class="card">
-      <img src="Imgs/dalia.jpeg" alt="Dalia">
+      <img src="dalia.jpeg" alt="Dalia">
       <h3>Dalia</h3>
       <p>Flor elegante que simboliza la gratitud y el compromiso.</p>
     </div>
     <div class="card">
-      <img src="Imgs/rosablanca.jpeg" alt="Rosa Blanca">
+      <img src="rosablanca.jpeg" alt="Rosa Blanca">
       <h3>Rosa Blanca</h3>
       <p>Clásico símbolo de pureza, inocencia y paz.</p>
     </div>
     <div class="card">
-      <img src="Imgs/rosaroja.jpeg" alt="Rosa Roja">
+      <img src="rosaroja.jpeg" alt="Rosa Roja">
       <h3>Rosa Roja</h3>
       <p>La expresión universal del amor y la pasión.</p>
     </div>
     <div class="card">
-      <img src="Imgs/amapolas.jpeg" alt="Amapolas">
+      <img src="amapolas.jpeg" alt="Amapolas">
       <h3>Amapolas</h3>
       <p>Transmiten descanso y esperanza, un toque silvestre y delicado.</p>      
     </div>
     <div class="card">
-      <img src="Imgs/campanillas.jpeg" alt="Campanillas">
+      <img src="campanillas.jpeg" alt="Campanillas">
       <h3>Campanillas</h3>
       <p>Simbolizan humildad y gratitud, con un encanto sencillo.</p>
     </div>
     <div class="card">
-      <img src="Imgs/clavel.jpeg" alt="Clavel">
+      <img src="clavel.jpeg" alt="Clavel">
       <h3>Clavel</h3>
       <p>Flor versátil que expresa admiración y afecto sincero.</p>
     </div>
@@ -378,3 +378,4 @@
   </script>
 </body>
 </html>
+
